# mcp-screenshot-server

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: mcp-tools.mdc
.github/workflows/: ci.yml  publish.yml
src/mcp_screenshot_server/: __init__.py  models.py  server.py  storage.py
tests/: __init__.py  conftest.py  test_server.py
